# FireRedTTS2-ja-dialogue

./: .gitignore  NOTICE  README.md  pyproject.toml
dialogue_tools/: README.md  postprocess.py  synth_backchannel.py  synthesize.py
dialogue_tools/examples/: smoke_input.txt  smoke_input_dense.txt  smoke_input_mixed.txt
dialogue_tools/vap/: README.md  vap_backchannel_times.py  vap_offline_bc.py
fireredtts2/: fireredtts2.py
